--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Compose Counters</string>
     <string name="count1">Contador 1</string>
+    <string name="count">Contador</string>
     <string name="count2">Contador 2</string>
     <string name="reset">Borrar</string>
     <string name="increment">Incremento: </string>
